--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -21,3 +21,17 @@
   color: #fefefe;
   text-shadow: 1px 1px 2px #0a0a0a;
 }
+
+.no-js .top-bar {
+  display: none;
+}
+
+@media screen and (min-width: 40em) {
+  .no-js .top-bar {
+    display: block;
+  }
+
+  .no-js .title-bar {
+    display: none;
+  }
+}
