--- a/lib/catcasts_web/templates/layout/app.html.eex
+++ b/lib/catcasts_web/templates/layout/app.html.eex
@@ -14,8 +14,7 @@
   <body>
     <div class="container">
       <%= render "_navigation.html", conn: @conn %>
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <%= render "_flash.html", conn: @conn %>
 
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
