--- a/lib/catcasts_web/templates/layout/app.html.eex
+++ b/lib/catcasts_web/templates/layout/app.html.eex
@@ -14,7 +14,8 @@
   <body>
     <div class="container">
       <%= render "_navigation.html", conn: @conn %>
-      <%= render "_flash.html", conn: @conn %>
+      <p class="callout primary" role="alert"><%= get_flash(@conn, :info) %></p>
+      <p class="callout alert" role="alert"><%= get_flash(@conn, :error) %></p>
 
       <main role="main">
         <%= render @view_module, @view_template, assigns %>
